# hyperiondb

./: .gitignore  .npmignore  Cargo.toml  README.md  bench.py  config.json  hyperiondb-client.js  hyperiondb_data.json  index.d.ts  index.js  package-lock.json  package.json  test.js  testing.py
generate_data/: Cargo.toml
generate_data/src/: main.rs
hyperiondb_data/: shard_0.bin.lz4  shard_0.wal  shard_1.bin.lz4  shard_1.wal  shard_10.wal  shard_11.wal  shard_2.bin.lz4  shard_2.wal  shard_3.bin.lz4  shard_3.wal  shard_4.bin.lz4  shard_4.wal  shard_5.bin.lz4  shard_5.wal  shard_6.bin.lz4  shard_6.wal  shard_7.bin.lz4  shard_7.wal  shard_8.wal  shard_9.wal
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: check_rust.js
src/: config.rs  db.rs  handler.rs  lib.rs  main.old.rs  main.rs  perf_test.rs  utils.rs
src/handler/: mod.rs
src/hyperion_db/: delete_all.rs  delete_method.rs  get_all_records_method.rs  get_method.rs  hyperion_db_struct.rs  insert_method.rs  insert_or_update.rs  mod.rs  new_method.rs  query_multiple.rs
src/index/: mod.rs  query.rs  update.rs  utils.rs
src/shard_manager/: mod.rs
src/storage/: mod.rs
