[package]
name = "hyperiondb"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "perf_test"
path = "src/perf_test.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.3"
seahash = "3.0"
lz4 = "1.24.0"
